# SharkNote

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  configuration .toml.example  daytheipc-com.code-workspace  language.ron  readme.md
_src/: cors.rs  oldgetdocument.rs
public/: login.html  webeditor.html
sqlite/: startup.sql
src/: aaa  authentication.rs  catchers.rs  config_file.rs  configuration.rs  content.rs  database_handler.rs  editor.rs  language_file.rs  main.rs  oldgetdocument.rs  pages.rs  table_of_contents.rs  user.rs  users.rs  utils.rs  webeditor.rs
src/authentication/: components.rs  email.rs  login.rs  logout.rs  main_forms.rs  mod.rs  password_reset.rs  register.rs
src/database_handlers/: db_utils.rs  page_owner.rs  pages.rs
src/editor/: components.rs  file_explorer.rs  mod.rs
src/pages/: database.rs  dir.rs  files.rs  mod.rs  page.rs  permissions.rs
src/renderer/: mod.rs  table_of_contents.rs
src/users/: authentication.rs  code.rs  invite.rs  mod.rs  user.rs
static/: blobhajhappy.ascii  editor.css  editor.css.map  editor.js  editor.scss  menherahappy.ascii
static/blobhaj/: Blobhaj_License.html
static/css/: auth.scss  base.css.map  base.scss  dropdown.css.map  dropdown.scss  editor.css.map  editor.scss  filetypes.scss  modal.css.map  modal.scss
static/js/: editor.js  files.js  page_selection.js  utils.js
static/js/editor/: index.js  notifications.js
templates/: auth-base.html.tera  auth-conf.html.tera  auth-confirmation.html.tera  auth-message.html.tera  auth-panel.html.tera  auth-reset.html.tera  auth.html.tera  base.html.tera  editor.html.tera  error.html.tera  loaders.html.tera  login.html.tera  modal.html.tera  redirect.html.tera
templates/auth/: auth.html.tera  base.html.tera  macros.html.tera
templates/auth/components/: alert-internal-error.html.tera  alert-not_authorized.html.tera  alert-wrong-code.html.tera  alert-wrong-password.html.tera  already-logged-in.html.tera  confirmation-code.html.tera  login-confirmation-code.html.tera  login-register-forms.html.tera  login-success.html.tera  main-forms.html.tera  register-confirmation-code.html.tera  reset-confirmation-code.html.tera  reset-form.html.tera  reset-success.html.tera  reset.html.tera
templates/editor/: editor.html.tera  select_page.html.tera
templates/editor/components/: deletion_modal.html.tera  dir_creation_modal.html.tera  explorer.html.tera  file_creation_modal.html.tera  file_explorer.html.tera  notification.html.tera  renaming.html.tera
templates/error/: base.html.tera  internal_error.html.tera  not_authorized.html.tera  not_found.html.tera
