[package]
name = "daytheipc-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = "0.5.1"
markdown-it = "0.4.0"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
html_editor = "0.5.2"
unidecode = "0.3.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.95"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5.0.0"
inquire = "0.6.0"
libaes = "0.6.4"
rocket-session-store = "0.2.0"
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["handlebars", "tera"]}
